# elk-fastapi-app-monitoring

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
apps/: app.py
elasticsearch/: elasticsearch.yml
kibana/: kibana.yml
logstash/config/: logstash.yml
logstash/pipeline/: logstash.conf
src/elk_fastapi_app_monitoring/controllers/: users.py
src/elk_fastapi_app_monitoring/database/: db.py
src/elk_fastapi_app_monitoring/models/: users.py
tests/: example_test.py
